--- a/index.html
+++ b/index.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal-Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="personar.css">
 </head>
 <body>
+    <section class="hbg" >
+        <div id="font-down"  class="half-width">
+            <h3 class="font">Hello I'm </h3>
+            <h1><span class="name-highlite">Jack Smith</span></h1>
+            <p class="choto">You might saw me jumping,climbing buildings,and stopping trains.But nobody pays me a dime for that work</p>
+        </div>
+
+        <div class="half-width">
+            <img src="images/peter.png" alt="">
+        </div>
+        <a class="link-button" target="_blank" href="https://milon426.github.io/newproject/">MY WEBSITE</a>
     
+    </section>
+    <section class="tnd-bg">
+
+        <div class="half-width">
+            
+            <img src="images/peter_dream.png" alt="">
+
+        </div>
+
+        <div class="half-width">
+            <h2>Biography</h2>
+            <p class="choto">Lorem lpsum is simply dummy text of the printing and typesetting industry.Lorem lpsum has been the industry's standard dummy text ever since the 1500s,when an unknown printer took a galley of type and scrambled it to make a type
+
+            </p>
+            <a class="link-button" target="_blank" href="https://milon426.github.io/newproject/">MY WEBSITE</a>
+        </div>
+    </section>
 </body>
 </html>
